--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 							<div class="container">
 
 								<header>
+									<h3 class="alt"><strong>Miika Kainu</strong></h3>
 								</header>
 
 								<div class="row">
