lisäsin "valokuvaaja" sivun yläosaan

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 
 								<header>
 									<h3 class="alt"><strong>Miika Kainu</strong></h3>
+									<h4 class="alt">valokuvaaja</h4>
 								</header>
 
 								<div class="row">
