kuvat mukana repossa

--- a/index.html
+++ b/index.html
@@ -97,31 +97,31 @@
 								<div class="row">
 									<div class="4u 12u$(mobile)">
 										<article class="item">
-											<a href="http://koti.kapsi.fi/~muuankarski/kuvat/miikan_portfolio/p_ali.jpg" class="image fit"><img src="http://koti.kapsi.fi/~muuankarski/kuvat/miikan_portfolio/p_ali.jpg" alt="" /></a>
+											<a href="images/portfolio/p_ali.jpg" class="image fit"><img src="images/portfolio/p_ali.jpg" alt="" /></a>
 											<header>
 												<h3>Ipsum Feugiat</h3>
 											</header>
 										</article>
 										<article class="item">
-											<a href="http://koti.kapsi.fi/~muuankarski/kuvat/miikan_portfolio/p_essu.jpg" class="image fit"><img src="http://koti.kapsi.fi/~muuankarski/kuvat/miikan_portfolio/p_essu.jpg" alt="" /></a>
+											<a href="images/portfolio/p_essu.jpg" class="image fit"><img src="images/portfolio/p_essu.jpg" alt="" /></a>
 											<header>
 												<h3>Rhoncus Semper</h3>
 											</header>
 										</article>
 										<article class="item">
-											<a href="http://koti.kapsi.fi/~muuankarski/kuvat/miikan_portfolio/p_kadulla.jpg" class="image fit"><img src="http://koti.kapsi.fi/~muuankarski/kuvat/miikan_portfolio/p_kadulla.jpg" alt="" /></a>
+											<a href="images/portfolio/p_kadulla.jpg" class="image fit"><img src="images/portfolio/p_kadulla.jpg" alt="" /></a>
 											<header>
 												<h3>Dolor Penatibus</h3>
 											</header>
 										</article>
 										<article class="item">
-											<a href="http://koti.kapsi.fi/~muuankarski/kuvat/miikan_portfolio/v_lehma.jpg" class="image fit"><img src="http://koti.kapsi.fi/~muuankarski/kuvat/miikan_portfolio/v_lehma.jpg" alt="" /></a>
+											<a href="images/portfolio/v_lehma.jpg" class="image fit"><img src="images/portfolio/v_lehma.jpg" alt="" /></a>
 											<header>
 												<h3>Dolor Penatibus</h3>
 											</header>
 										</article>
 										<article class="item">
-											<a href="http://koti.kapsi.fi/~muuankarski/kuvat/miikan_portfolio/v_taivas.jpg" class="image fit"><img src="http://koti.kapsi.fi/~muuankarski/kuvat/miikan_portfolio/v_taivas.jpg" alt="" /></a>
+											<a href="images/portfolio/v_taivas.jpg" class="image fit"><img src="images/portfolio/v_taivas.jpg" alt="" /></a>
 											<header>
 												<h3>Dolor Penatibus</h3>
 											</header>
@@ -143,31 +143,31 @@
 									</div> -->
 									<div class="4u$ 12u$(mobile)">
 										<article class="item">
-											<a href="http://koti.kapsi.fi/~muuankarski/kuvat/miikan_portfolio/p_koira.jpg" class="image fit"><img src="http://koti.kapsi.fi/~muuankarski/kuvat/miikan_portfolio/p_koira.jpg" alt="" /></a>
+											<a href="images/portfolio/p_koira.jpg" class="image fit"><img src="images/portfolio/p_koira.jpg" alt="" /></a>
 											<header>
 												<h3>Dolor Penatibus</h3>
 											</header>
 										</article>
 										<article class="item">
-											<a href="http://koti.kapsi.fi/~muuankarski/kuvat/miikan_portfolio/p_linda.jpg" class="image fit"><img src="http://koti.kapsi.fi/~muuankarski/kuvat/miikan_portfolio/p_linda.jpg" alt="" /></a>
+											<a href="images/portfolio/p_linda.jpg" class="image fit"><img src="images/portfolio/p_linda.jpg" alt="" /></a>
 											<header>
 												<h3>Orci Convallis</h3>
 											</header>
 										</article>
 										<article class="item">
-											<a href="http://koti.kapsi.fi/~muuankarski/kuvat/miikan_portfolio/p_viinimies.jpg" class="image fit"><img src="http://koti.kapsi.fi/~muuankarski/kuvat/miikan_portfolio/p_viinimies.jpg" alt="" /></a>
+											<a href="images/portfolio/p_viinimies.jpg" class="image fit"><img src="images/portfolio/p_viinimies.jpg" alt="" /></a>
 											<header>
 												<h3>Orci Convallis</h3>
 											</header>
 										</article>
 										<article class="item">
-											<a href="http://koti.kapsi.fi/~muuankarski/kuvat/miikan_portfolio/v_maisema.jpg" class="image fit"><img src="http://koti.kapsi.fi/~muuankarski/kuvat/miikan_portfolio/v_maisema.jpg" alt="" /></a>
+											<a href="images/portfolio/v_maisema.jpg" class="image fit"><img src="images/portfolio/v_maisema.jpg" alt="" /></a>
 											<header>
 												<h3>Dolor Penatibus</h3>
 											</header>
 										</article>
 										<article class="item">
-											<a href="http://koti.kapsi.fi/~muuankarski/kuvat/miikan_portfolio/v_seina.jpg" class="image fit"><img src="http://koti.kapsi.fi/~muuankarski/kuvat/miikan_portfolio/v_seina.jpg" alt="" /></a>
+											<a href="images/portfolio/v_seina.jpg" class="image fit"><img src="images/portfolio/v_seina.jpg" alt="" /></a>
 											<header>
 												<h3>Dolor Penatibus</h3>
 											</header>
