kuvien padding + margin 40 > 5

--- a/index.html
+++ b/index.html
@@ -98,79 +98,46 @@
 									<div class="4u 12u$(mobile)">
 										<article class="item">
 											<a href="images/portfolio/p_ali.jpg" class="image fit"><img src="images/portfolio/p_ali.jpg" alt="" /></a>
-											<header>
+											<!-- <header>
 												<h3>Ipsum Feugiat</h3>
-											</header>
+											</header> -->
 										</article>
 										<article class="item">
 											<a href="images/portfolio/p_essu.jpg" class="image fit"><img src="images/portfolio/p_essu.jpg" alt="" /></a>
-											<header>
-												<h3>Rhoncus Semper</h3>
-											</header>
 										</article>
 										<article class="item">
 											<a href="images/portfolio/p_kadulla.jpg" class="image fit"><img src="images/portfolio/p_kadulla.jpg" alt="" /></a>
-											<header>
-												<h3>Dolor Penatibus</h3>
-											</header>
 										</article>
 										<article class="item">
 											<a href="images/portfolio/v_lehma.jpg" class="image fit"><img src="images/portfolio/v_lehma.jpg" alt="" /></a>
-											<header>
-												<h3>Dolor Penatibus</h3>
-											</header>
 										</article>
 										<article class="item">
 											<a href="images/portfolio/v_taivas.jpg" class="image fit"><img src="images/portfolio/v_taivas.jpg" alt="" /></a>
-											<header>
-												<h3>Dolor Penatibus</h3>
-											</header>
 										</article>
 									</div>
 									<!-- <div class="4u 12u$(mobile)">
 										<article class="item">
 											<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-											<header>
-												<h3>Magna Nullam</h3>
-											</header>
 										</article>
 										<article class="item">
 											<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-											<header>
-												<h3>Natoque Vitae</h3>
-											</header>
 										</article>
 									</div> -->
 									<div class="4u$ 12u$(mobile)">
 										<article class="item">
 											<a href="images/portfolio/p_koira.jpg" class="image fit"><img src="images/portfolio/p_koira.jpg" alt="" /></a>
-											<header>
-												<h3>Dolor Penatibus</h3>
-											</header>
 										</article>
 										<article class="item">
 											<a href="images/portfolio/p_linda.jpg" class="image fit"><img src="images/portfolio/p_linda.jpg" alt="" /></a>
-											<header>
-												<h3>Orci Convallis</h3>
-											</header>
 										</article>
 										<article class="item">
 											<a href="images/portfolio/p_viinimies.jpg" class="image fit"><img src="images/portfolio/p_viinimies.jpg" alt="" /></a>
-											<header>
-												<h3>Orci Convallis</h3>
-											</header>
 										</article>
 										<article class="item">
 											<a href="images/portfolio/v_maisema.jpg" class="image fit"><img src="images/portfolio/v_maisema.jpg" alt="" /></a>
-											<header>
-												<h3>Dolor Penatibus</h3>
-											</header>
 										</article>
 										<article class="item">
 											<a href="images/portfolio/v_seina.jpg" class="image fit"><img src="images/portfolio/v_seina.jpg" alt="" /></a>
-											<header>
-												<h3>Dolor Penatibus</h3>
-											</header>
 										</article>
 									</div>
 
@@ -194,55 +161,34 @@
 								<div class="4u 12u$(mobile)">
 									<article class="item">
 										<iframe src="https://player.vimeo.com/video/94957466" style="position: relative; height: 340px; width: 100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-										<header>
+										<!-- <header>
 											<h3>Alma-talo</h3>
-										</header>
+										</header> -->
 									</article>
 									<article class="item">
 										<iframe src="https://player.vimeo.com/video/67382482" style="position: relative; height: 340px; width: 100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-										<header>
-											<h3>Alma 360 Showreel 2013</h3>
-										</header>
 									</article>
 									<article class="item">
 										<iframe src="https://player.vimeo.com/video/34941745" style="position: relative; height: 340px; width: 100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-										<header>
-											<h3>Alma 360 Showreel 2013</h3>
-										</header>
 									</article>
 								</div>
 								<!-- <div class="4u 12u$(mobile)">
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-										<header>
-											<h3>Magna Nullam</h3>
-										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-										<header>
-											<h3>Natoque Vitae</h3>
-										</header>
 									</article>
 								</div> -->
 								<div class="4u$ 12u$(mobile)">
 									<article class="item">
 										<iframe src="https://player.vimeo.com/video/193150758" style="position: relative; height: 340px; width: 100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-										<header>
-											<h3>Dolor Penatibus</h3>
-										</header>
 									</article>
 									<article class="item">
 										<iframe src="https://player.vimeo.com/video/67387847" style="position: relative; height: 340px; width: 100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-										<header>
-											<h3>Orci Convallis</h3>
-										</header>
 									</article>
 									<article class="item">
 										<iframe src="https://player.vimeo.com/video/193140445" style="position: relative; height: 340px; width: 100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-										<header>
-											<h3>Orci Convallis</h3>
-										</header>
 									</article>
 								</div>
 							</div>
