miika aloitteli linkedin linkillä ja poistin kuvalinkit kuvista

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Miika Kainu - Valokuvaaja</title>
+		<title>Miika Kainu - Kuvaaja</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -25,7 +25,7 @@
 						<div id="logo">
 							<!-- <span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span> -->
 							<a href="#" id="portfolio-link" class="skel-layers-ignoreHref"><h1 id="title">Miika Kainu</h1></a>
-							<p>Valokuvaaja</p>
+							<p>Kuvaaja</p>
 						</div>
 
 					<!-- Nav -->
@@ -46,7 +46,7 @@
 							<ul>
 								<!-- <li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Alku</span></a></li> -->
 								<li><a href="#kuva" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Valokuva</span></a></li>
-								<li><a href="#video" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Video</span></a></li>
+								<li><a href="#video" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-play">Video</span></a></li>
 								<!-- <li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">Minä</span></a></li> -->
 								<!-- <li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact</span></a></li> -->
 							</ul>
@@ -60,6 +60,7 @@
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/miikakainu/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://www.vimeo.com/miikakainu/" class="icon fa-vimeo"><span class="label">Vimeo</span></a></li>
+							<li><a href="https://fi.linkedin.com/in/miika-kainu-26b37918" class="icon fa-linkedin"><span class="label">linkedin</span></a></li>
 							<li><a href="mailto:miika.kainu@gmail.com?Subject=Portfoliosta" target="_top"" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
@@ -79,7 +80,7 @@
 							</header>
 
 							<footer>
-								<h3>Valokuvaaja</h3>
+								<h3>Kuvaaja</h3>
 							</footer>
 
 						</div>
@@ -97,47 +98,47 @@
 								<div class="row">
 									<div class="4u 12u$(mobile)">
 										<article class="item">
-											<a href="images/portfolio/p_ali.jpg" class="image fit"><img src="images/portfolio/p_ali.jpg" alt="" /></a>
+											<img class="image fit" src="images/portfolio/p_ali.jpg" alt="" />
 											<!-- <header>
 												<h3>Ipsum Feugiat</h3>
 											</header> -->
 										</article>
 										<article class="item">
-											<a href="images/portfolio/p_essu.jpg" class="image fit"><img src="images/portfolio/p_essu.jpg" alt="" /></a>
+											<img class="image fit" src="images/portfolio/p_essu.jpg" alt="" />
 										</article>
 										<article class="item">
-											<a href="images/portfolio/p_kadulla.jpg" class="image fit"><img src="images/portfolio/p_kadulla.jpg" alt="" /></a>
+											<img class="image fit" src="images/portfolio/p_kadulla.jpg" alt="" />
 										</article>
 										<article class="item">
-											<a href="images/portfolio/v_lehma.jpg" class="image fit"><img src="images/portfolio/v_lehma.jpg" alt="" /></a>
+											<img class="image fit" src="images/portfolio/v_lehma.jpg" alt="" />
 										</article>
 										<article class="item">
-											<a href="images/portfolio/v_taivas.jpg" class="image fit"><img src="images/portfolio/v_taivas.jpg" alt="" /></a>
+											<img class="image fit" src="images/portfolio/v_taivas.jpg" alt="" />
 										</article>
 									</div>
 									<!-- <div class="4u 12u$(mobile)">
 										<article class="item">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+											<a href="#" class="image fit"><img class="image fit" src="images/pic04.jpg" alt="" />
 										</article>
 										<article class="item">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="#" class="image fit"><img class="image fit" src="images/pic05.jpg" alt="" />
 										</article>
 									</div> -->
 									<div class="4u$ 12u$(mobile)">
 										<article class="item">
-											<a href="images/portfolio/p_koira.jpg" class="image fit"><img src="images/portfolio/p_koira.jpg" alt="" /></a>
+											<img class="image fit" src="images/portfolio/p_koira.jpg" alt="" />
 										</article>
 										<article class="item">
-											<a href="images/portfolio/p_linda.jpg" class="image fit"><img src="images/portfolio/p_linda.jpg" alt="" /></a>
+											<img class="image fit" src="images/portfolio/p_linda.jpg" alt="" />
 										</article>
 										<article class="item">
-											<a href="images/portfolio/p_viinimies.jpg" class="image fit"><img src="images/portfolio/p_viinimies.jpg" alt="" /></a>
+											<img class="image fit" src="images/portfolio/p_viinimies.jpg" alt="" />
 										</article>
 										<article class="item">
-											<a href="images/portfolio/v_maisema.jpg" class="image fit"><img src="images/portfolio/v_maisema.jpg" alt="" /></a>
+											<img class="image fit" src="images/portfolio/v_maisema.jpg" alt="" />
 										</article>
 										<article class="item">
-											<a href="images/portfolio/v_seina.jpg" class="image fit"><img src="images/portfolio/v_seina.jpg" alt="" /></a>
+											<img class="image fit" src="images/portfolio/v_seina.jpg" alt="" />
 										</article>
 									</div>
 
@@ -174,10 +175,10 @@
 								</div>
 								<!-- <div class="4u 12u$(mobile)">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" />
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" />
 									</article>
 								</div> -->
 								<div class="4u$ 12u$(mobile)">
@@ -204,7 +205,7 @@
 								<h2>Minä</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" />
 
 							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
 							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
