--- a/index.html
+++ b/index.html
@@ -92,53 +92,78 @@
 
 								<header>
 									<h3 class="alt"><strong>Miika Kainu</strong></h3>
-									<h4 class="alt">valokuvaaja</h4>
+									<h4 class="alt">kuvaaja</h4>
 								</header>
 
 								<div class="row">
 									<div class="4u 12u$(mobile)">
 										<article class="item">
-											<img class="image fit" src="images/portfolio/p_ali.jpg" alt="" />
+											<img class="image fit" src="images/portfolio/p_linda2.jpg" alt="" />
 											<!-- <header>
 												<h3>Ipsum Feugiat</h3>
 											</header> -->
 										</article>
 										<article class="item">
-											<img class="image fit" src="images/portfolio/p_essu.jpg" alt="" />
+											<img class="image fit" src="images/portfolio/p_juss2.jpg" alt="" />
 										</article>
 										<article class="item">
-											<img class="image fit" src="images/portfolio/p_kadulla.jpg" alt="" />
+											<img class="image fit" src="images/portfolio/p_ali.jpg" alt="" />
 										</article>
 										<article class="item">
 											<img class="image fit" src="images/portfolio/v_lehma.jpg" alt="" />
 										</article>
 										<article class="item">
-											<img class="image fit" src="images/portfolio/v_taivas.jpg" alt="" />
+											<img class="image fit" src="images/portfolio/v_aurinko.jpg" alt="" />
+										</article>
+										<article class="item">
+											<img class="image fit" src="images/portfolio/p_juss2.jpg" alt="" />
+										</article>
+										<article class="item">
+											<img class="image fit" src="images/portfolio/v_tiina.jpg" alt="" />
+										</article>
+										<article class="item">
+											<img class="image fit" src="images/portfolio/v_alma.jpg" alt="" />
+										</article>
+										<article class="item">
+											<img class="image fit" src="images/portfolio/p_mira.jpg" alt="" />
+										</article>
+										<article class="item">
+											<img class="image fit" src="images/portfolio/p_noma.jpg" alt="" />
 										</article>
 									</div>
-									<!-- <div class="4u 12u$(mobile)">
-										<article class="item">
-											<a href="#" class="image fit"><img class="image fit" src="images/pic04.jpg" alt="" />
-										</article>
-										<article class="item">
-											<a href="#" class="image fit"><img class="image fit" src="images/pic05.jpg" alt="" />
-										</article>
-									</div> -->
+
 									<div class="4u$ 12u$(mobile)">
 										<article class="item">
-											<img class="image fit" src="images/portfolio/p_koira.jpg" alt="" />
+											<img class="image fit" src="images/portfolio/v_samu.jpg" alt="" />
 										</article>
 										<article class="item">
 											<img class="image fit" src="images/portfolio/p_linda.jpg" alt="" />
 										</article>
 										<article class="item">
-											<img class="image fit" src="images/portfolio/p_viinimies.jpg" alt="" />
+											<img class="image fit" src="images/portfolio/v_juss.jpg" alt="" />
 										</article>
 										<article class="item">
-											<img class="image fit" src="images/portfolio/v_maisema.jpg" alt="" />
+											<img class="image fit" src="images/portfolio/p_tytto.jpg" alt="" />
 										</article>
 										<article class="item">
-											<img class="image fit" src="images/portfolio/v_seina.jpg" alt="" />
+											<img class="image fit" src="images/portfolio/v_jusuf.jpg" alt="" />
+										</article>
+										<article class="item">
+											<img class="image fit" src="images/portfolio/p_roikkuja.jpg" alt="" />
+										</article>
+										<article class="item">
+											<img class="image fit" src="images/portfolio/v_auto.jpg" alt="" />
+										</article>
+										<article class="item">
+											<img class="image fit" src="images/portfolio/p_steffit.jpg" alt="" />
+										</article>
+										<article class="item">
+											<img class="image fit" src="images/portfolio/v_viinimies.jpg" alt="" />
+										</article>
+										<article class="item">
+											<img class="image fit" src="images/portfolio/v_jusuf2.jpg" alt="" />
+										</article><article class="item">
+											<img class="image fit" src="images/portfolio/p_pojat.jpg" alt="" />
 										</article>
 									</div>
 
