--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Miika Kainu - Kuvaaja</title>
+		<title>Miika Kainu</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -25,7 +25,6 @@
 						<div id="logo">
 							<!-- <span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span> -->
 							<a href="#" id="portfolio-link" class="skel-layers-ignoreHref"><h1 id="title">Miika Kainu</h1></a>
-							<p>Kuvaaja</p>
 						</div>
 
 					<!-- Nav -->
@@ -79,10 +78,6 @@
 								<h2 class="alt"><strong>Miika Kainu</strong></h2>
 							</header>
 
-							<footer>
-								<h3>Kuvaaja</h3>
-							</footer>
-
 						</div>
 					</section> -->
 
@@ -92,7 +87,6 @@
 
 								<header>
 									<h3 class="alt"><strong>Miika Kainu</strong></h3>
-									<h4 class="alt">kuvaaja</h4>
 								</header>
 
 								<div class="row">
@@ -116,7 +110,7 @@
 											<img class="image fit" src="images/portfolio/v_aurinko.jpg" alt="" />
 										</article>
 										<article class="item">
-											<img class="image fit" src="images/portfolio/p_juss2.jpg" alt="" />
+											<img class="image fit" src="images/portfolio/p_juss.jpg" alt="" />
 										</article>
 										<article class="item">
 											<img class="image fit" src="images/portfolio/v_tiina.jpg" alt="" />
@@ -155,15 +149,15 @@
 											<img class="image fit" src="images/portfolio/v_auto.jpg" alt="" />
 										</article>
 										<article class="item">
-											<img class="image fit" src="images/portfolio/p_steffit.jpg" alt="" />
-										</article>
-										<article class="item">
 											<img class="image fit" src="images/portfolio/v_viinimies.jpg" alt="" />
 										</article>
 										<article class="item">
-											<img class="image fit" src="images/portfolio/v_jusuf2.jpg" alt="" />
-										</article><article class="item">
+											<img class="image fit" src="images/portfolio/p_steffit.jpg" alt="" />
+										</article>
+										<article class="item">
 											<img class="image fit" src="images/portfolio/p_pojat.jpg" alt="" />
+										</article><article class="item">
+											<img class="image fit" src="images/portfolio/v_jusuf2.jpg" alt="" />
 										</article>
 									</div>
 
@@ -186,7 +180,7 @@
 							<div class="row">
 								<div class="4u 12u$(mobile)">
 									<article class="item">
-										<iframe src="https://player.vimeo.com/video/94957466" style="position: relative; height: 340px; width: 100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+										<iframe src="https://player.vimeo.com/video/193140445" style="position: relative; height: 340px; width: 100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 										<!-- <header>
 											<h3>Alma-talo</h3>
 										</header> -->
@@ -214,7 +208,7 @@
 										<iframe src="https://player.vimeo.com/video/67387847" style="position: relative; height: 340px; width: 100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 									</article>
 									<article class="item">
-										<iframe src="https://player.vimeo.com/video/193140445" style="position: relative; height: 340px; width: 100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+										<iframe src="https://player.vimeo.com/video/94957466" style="position: relative; height: 340px; width: 100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 									</article>
 								</div>
 							</div>
