desing -> tyyli sivun lopussa

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Miika Kainu 2016</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Miika Kainu 2016</li><li>Tyyli: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</div>
